# cheetah_lite

./: CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  README.md
cheetah/channel_mask/test/: CMakeLists.txt  ChannelMaskTest.h  ConfigurableChannelMaskTest.h  PolicyFactoryTest.h  ReplaceConstantPolicyTest.h
cheetah/channel_stats/test/: CMakeLists.txt
cheetah/corner_turn/test/: CMakeLists.txt  CornerTurnTest.h
cheetah/cuda_utils/test/: CMakeLists.txt
cheetah/data/: Birdie.h  CMakeLists.txt  CachingAllocator.h  Candidate.h  CandidateWindow.h  CandidateWindowConfig.h  Ccl.h  ComplexTypeTraits.h  DataSequence2D.h  DataSequence2DFastIterator.h  DataSequence2DIterator.h  DataSequence2DPartialIterator.h  DataSequence2DPartialRange.h  DataSequence2DSlowIterator.h  DataSrcConfig.h  DataTypeTraits.h  DedispersionMeasure.h  DefaultAllocator.h  DmConstant.h  DmTime.h  DmTrial.h  DmTrials.h  DmTrialsMetadata.h  ExtendedTimeFrequency.h  FrequencySeries.h  FrequencyTime.h  NuDot.h  Ocld.h  OptimisedCandidate.h  PowerSeries.h  RfimFlaggedData.h  Scl.h  Series.h  SeriesSlice.h  SpCandidate.h  SpCandidateData.h  SpCcl.h  Spectrum.h  TimeFrequency.h  TimeFrequencyCommon.h  (+7 more)
cheetah/data/altera/: CMakeLists.txt  Series.h
cheetah/data/cuda/: CMakeLists.txt  CornerTurn.h  FrequencyTime.h  Series.h  TimeFrequency.h
cheetah/data/detail/: CachingAllocator.cpp  CachingAllocatorImpl.cpp  CachingAllocatorImpl.h  CachingAllocatorImplBase.cpp  CachingAllocatorImplBase.h  Candidate.cpp  DataSequence2D.cpp  DataSequence2DFastIterator.cpp  DataSequence2DPartialIterator.cpp  DataSequence2DPartialIterator_bool.cpp  DataSequence2DPartialRange.cpp  DataSequence2D_bool.cpp  DataTypeTraits.cpp  DmTime.cpp  DmTimeDm.cpp  DmTimeDm.h  DmTimeIterator.cpp  DmTimeIterator.h  DmTimeSlice.cpp  DmTimeSlice.h  DmTimeSliceIterator.cpp  DmTimeSliceIterator.h  DmTrial.cpp  DmTrials.cpp  ExtendedTimeFrequency.cpp  FrequencySeries.cpp  FrequencyTime.cpp  Ocld.cpp  OptimisedCandidate.cpp  PowerSeries.cpp  RfimFlaggedData.cpp  Series.cpp  SeriesSlice.cpp  SpCandidate.cpp  SpCandidateData.cpp  SpCcl.cpp  Spectrum.cpp  TimeFrequency.cpp  TimeFrequencyCommon.cpp  TimeFrequencyContainer.cpp  (+5 more)
cheetah/data/src/: Birdie.cpp  CandidateWindow.cpp  CandidateWindowConfig.cpp  Ccl.cpp  DataSequence2D.cpp  DataSequence2DIterator.cpp  DataSequence2DSlowIterator.cpp  DataSequence2D_bool.cpp  DataSrcConfig.cpp  DmTrialsMetadata.cpp  Scl.cpp  TimeFrequencyMetadata.cpp
cheetah/data/test/: BirdieTest.h  CMakeLists.txt  CandidateTest.h  CclTest.h  DataSequence2DFastIteratorTest.h  DataSequence2DTest.h  DedispersionMeasureTest.h  FrequencyTimeTest.h  NuDotTest.h  OcldTest.h  OptimisedCandidateTest.h  RfimFlaggedDataTest.h  SclTest.h  SeriesTest.h  SpCandidateTest.h  SpCclTest.h  TimeFrequencyContainerTest.h  TimeFrequencyFlagsTest.h  TimeFrequencyMetadataTest.h  TimeFrequencyStatsTest.h  TimeFrequencyTest.h  UnitsTest.h  VectorLikeTest.h
cheetah/data/test_utils/: CMakeLists.txt  CachingAllocatorTest.h  CommonCopyAndTransposeTester.h  CommonTimeFrequencyTester.h  DmTimeDmTest.h  DmTimeTest.h  DmTrialsGeneratorUtil.h  DmTrialsTester.h  FrequencySeriesTester.h  FrequencyTimeTester.h  PowerSeriesTest.h  SeriesTester.h  TimeFrequencyTester.h  TimeSeriesTester.h
cheetah/emulator/: CMakeLists.txt  Config.h  Emulator.h  EmulatorAppConfig.h  Factory.h
cheetah/emulator/detail/: Emulator.cpp  EmulatorAppConfig.cpp  Factory.cpp
cheetah/emulator/src/: Config.cpp  EmulatorAppConfig.cpp  emulator_main.cpp
cheetah/emulator/test/: CMakeLists.txt
cheetah/emulator/test_utils/: CMakeLists.txt
cheetah/generators/: BandPassGenerator.h  BasebandGaussianNoise.h  BasebandGaussianNoiseConfig.h  CMakeLists.txt  Config.h  DataGenerator.h  DispersedPulse.h  DispersedPulseConfig.h  GaussianNoise.h  GaussianNoiseConfig.h  GeneratorApp.h  GeneratorAppConfig.h  GeneratorFactory.h  NullGenerator.h  PhaseModelFactory.h  PulsarInjection.h  PulsarInjectionConfig.h  RfiGenerator.h  RfiScenario.h  SimplePhaseModelConfig.h  SimplePulsar.h  SimplePulsarConfig.h  SinusoidalTimeFrequency.h  Tempo2PhaseModelConfig.h
cheetah/generators/detail/: BandPassGenerator.cpp  BasebandGaussianNoise.cpp  DataGenerator.cpp  DispersedPulse.cpp  GaussianNoise.cpp  GeneratorApp.cpp  GeneratorFactory.cpp  NullGenerator.cpp  PulsarInjection.cpp  RfiGenerator.cpp  RfiScenario.cpp  SimplePulsar.cpp  SinusoidalTimeFrequency.cpp
cheetah/generators/pulse_profile/: CMakeLists.txt  ProfileManager.h  PulsarProfile.h  PulsarProfileConfig.h  PulsarProfileId.h
cheetah/generators/src/: BasebandGaussianNoiseConfig.cpp  Config.cpp  DispersedPulseConfig.cpp  GaussianNoiseConfig.cpp  GeneratorAppConfig.cpp  PhaseModelFactory.cpp  PulsarInjectionConfig.cpp  SimplePhaseModel.cpp  SimplePhaseModel.h  SimplePhaseModelConfig.cpp  SimplePulsarConfig.cpp  Tempo2PhaseModel.cpp  Tempo2PhaseModel.h  Tempo2PhaseModelConfig.cpp  generator_main.cpp
cheetah/generators/test/: CMakeLists.txt  GaussianNoiseTest.h  PulsarInjectionConfigTest.h  PulsarInjectionTest.h  SimplePulsarTest.h  Tempo2PhaseModelTest.h
cheetah/generators/test_utils/: CMakeLists.txt
cheetah/io/exporters/: CMakeLists.txt  DataExport.h  DataExportConfig.h  DataExportStreamConfig.h  ExporterType.h  FileStreamerConfig.h  OcldFileStreamer.h  OcldFileStreamerConfig.h  SclCandidateDataStreamer.h  SclCandidateDataStreamerConfig.h  SclFileStreamer.h  SclFileStreamerConfig.h  SpCandidateDataStreamer.h  SpCandidateDataStreamerConfig.h  SpCclFileStreamer.h  SpCclFileStreamerConfig.h  SpCclSigProc.h  SpCclSigProcConfig.h  SpCclSpeadReader.h  SpCclSpeadReaderConfig.h  SpCclSpeadStreamer.h  SpCclSpeadStreamerConfig.h  TestProbe.h
cheetah/modules/ddtr/: CMakeLists.txt  Config.h  Ddtr.h  DedispersionConfig.h  DedispersionTrialPlan.h  RfiExcisionConfig.h
cheetah/modules/rfim/: CMakeLists.txt  Config.h  DefaultRfimTraits.h  (+5 more)
cheetah/psrdada/: CMakeLists.txt  Config.h  DadaClientBase.h  DadaReadClient.h  DadaWriteClient.h  SigProcDadaStream.h
cheetah/sigproc/: CMakeLists.txt  Config.h  SigProcFileStream.h  SigProcHeader.h  SigProcWriter.h  WriterConfig.h
(+903 files in other folders)
